<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">wisay</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_tab_random">TabRandomActivity</string>

    <!-- setting group -->
    <string name="setting_group_help">Wisay</string>
    <string name="setting_group_application">Wisay</string>
    <string name="setting_group_homewidget">위젯 설정</string>
    <string name="setting_group_developer">개발자</string>

    <!-- setting group_wisay -->
    <string name="setting_wisay">Wisay?</string>
    <string name="setting_wisay_info">Wisay 정보</string>
    <string name="setting_wisay_using">도움말</string>
    <string name="setting_wisay_using_summary">어플, 위젯 사용방법등</string>
    <string name="setting_wisay_assess">평가하기</string>

    <!-- setting group_application -->
    <string name="setting_lang">언어</string>
    <string name="setting_lang_summary">변경시 앱을 다시 실행해야 적용됩니다.</string>

    <!-- setting group_homewidget -->
    <string name="setting_widget_lang">위젯 언어</string>
    <string name="setting_widget_textcolor">위젯 글 색상</string>
    <string name="setting_widget_bg">위젯 배경색</string>
    <string name="setting_widget_bg_summary">배경색을 변경합니다.</string>
    <string name="setting_widget_transparency">배경 투명색</string>
    <string name="setting_widget_transparency_summary">배경 투명색을 조절합니다.</string>

    <!-- setting group_developer -->
    <string name="setting_dev_contact">문의하기</string>
    <string name="setting_dev_blog">블로그</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="title_activity_">Activity</string>

</resources>
